fix MEW computation regression introduced by my previous checkin bug 257955 r/sr=roc